[project]
name = "market-rader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.5.0",
    "setuptools>=80.9.0",
    "streamlit>=1.52.2",
    "yfinance>=0.2.66",
]
